Fix autocomplete alignment, action buttons size

--- a/projects/srm/src/app/card/card.component.less
+++ b/projects/srm/src/app/card/card.component.less
@@ -73,10 +73,13 @@
                     flex: 0 1 auto;
                 }
 
-                &.odd > .active {
+                & > * {
+                    width: calc(50% ~'-' 4px);
+                }
+                &.odd > * {
                     width: 100%;
                 }
-                & > .active ~ .active {
+                & > * ~ * {
                     width: calc(50% ~'-' 4px);
                 }
             }
