--- a/projects/srm/src/app/search/search.component.less
+++ b/projects/srm/src/app/search/search.component.less
@@ -3,6 +3,7 @@
 .search-icon {
     .button-image;
     .background-image;
+    flex: 0 0 auto;
     width: 32px;
     height: 32px;
     background-size: 24px;
@@ -80,6 +81,7 @@
             align-items: center;
             width: 100%;
             padding: 16px;
+            padding-right: 12px;
             height: 56px;
             border-bottom: 1px solid @color-gray-6;
             box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.16), 0px 4px 12px rgba(0, 0, 0, 0.08);
@@ -97,7 +99,7 @@
                     flex: 0 0 auto;
                     .search-icon;
                     background-image: url(../../assets/img/icon-search-gray-4.svg);
-                    
+                    background-size: 18px;
                 }
 
                 .text {
